--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express": "^4.17.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-input-mask": "^2.0.4",
     "react-router-dom": "^5.2.0",
     "styled-components": "^5.2.1",
     "webpack": "^5.10.3",
